[tool.poetry]
name = "alfalfa-demo"
version = "0.1.0"
description = ""
authors = ["Cory Mosiman <cory.mosiman12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
alfalfa-client = "0.1.0.dev7"
jupyterlab = "^3.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
